# edgeloop

./: README.md  pyproject.toml
edgeloop/: __init__.py  agent.py  llm.py  router.py  tools.py
examples/: local_inventory_agent.py
tests/: test_edgeloop.py
